fixed alignment issues with article

--- a/style.css
+++ b/style.css
@@ -8,13 +8,15 @@ body{
 }
 
 header{
-    width: 100%;
+    /* width: 100%; */
     padding: 20px;
     background-color: #fff;
+    /* position: absolute; */
 }
 
 .nav{
-    width: 100%;
+    clear: both;
+    /* width: 100%; */
     background-color: #fff;
     padding: 20px;
     margin-top: 10px;
@@ -29,23 +31,28 @@ section{
     margin-top: 10px;
 }
 
-.aside{
+aside{
     margin-top: 10px;
     float: right;
     height: 60%;
-    width: 40%;
+    width: 45%;
     background-color: #fff;
 }
 
 article{
-    margin:auto;
+    margin: 0;
+    position: relative;
+    bottom: -110px;
     background-color: #888;
     padding: 10px;
+    left: 10px;
+    right: 10px;
+    clear: both;
+    width: 90%;
 }
 
 .h123{
     background-color: #fff;
-    margin-bottom: 10px;
 }
 
 .p{
